[package]
name = "linear-deque"
version = "0.1.1"
edition = "2021"
description = "A double-ended queue that can be sliced at any time without preparation."
authors = ["Eduardo R. D'Avila <erdavila@gmail.com>"]
repository = "https://github.com/erdavila/linear-deque-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
